
Sun Nov  7 18:20:16 PST 1999
(Mandrake)

fixed bug reported by ljlane@debian.org - icons still showed named when show
names was turned off.

-------------------------------------------------------------------------------

Mon Nov  8 20:38:35 PST 1999
(Mandrake)

evil bug I don't grok how it happened

-------------------------------------------------------------------------------

Tue Nov  9 16:10:16 PST 1999
(Raster)

oops typos in non EMX code.. :) missing ;

-------------------------------------------------------------------------------

Mon Nov 15 09:07:28 PST 1999
(Raster)

bounds checking fix :) thanks alan strange :)

-------------------------------------------------------------------------------

Mon Nov 15 09:34:29 PST 1999
(Mandrake)

fixed a pretty nasty uninitialized memory test.

-------------------------------------------------------------------------------

Mon Nov 15 14:53:40 PST 1999
(Mandrake)

fixed an uninitialized memory check in menus.c (reported by Alan Stange - this
man is getting it on with debuggers - I will put his name in the credits
sometime this week for 0.16.3)

-------------------------------------------------------------------------------

Fri Nov 19 16:34:16 EST 1999
(Christian)

Fixed a segfault that Paul Radford <prbluebottle@netscape.net>
reported: "Minimize a window into an iconbox, close the icon-
box and minimize the app again". I could not exactly reproduce
this because I already got segfaults when I _entered_ the window
that is uniconified when the iconbox is closed.

In any case, there were strange things going on with
mode.focuswin, because FocusToEWin(NULL) returns immediately
in clickmode ... hope the whole thing is history now.

-------------------------------------------------------------------------------

Fri Nov 19 18:58:56 PST 1999
(Raster)

fix variable expansion for file execcing...
fix mensu to be onscreen including submenus when u have menus onsreen selected.