@@ -84,9 +84,9 @@ void                IPC_Nop(char *params, Client * c);
 
 /* Changes By Asmodean_ <naru@caltech.edu> / #E@Efnet
  * 
- * * IPC_ReloadMenus(...) / reload_menus - Reloads menus from menus.cfg
- * *
- * * */
+ * * * IPC_ReloadMenus(...) / reload_menus - Reloads menus from menus.cfg
+ * * *
+ * * * */
 
 void                IPC_ReloadMenus(char *params, Client * c);
 
@@ -314,7 +314,8 @@ IPCStruct           IPCArray[] =
       "win_op <windowid> title <title>\n"
       "win_op <windowid> raise\n"
       "win_op <windowid> lower\n"
-      "win_op <windowid> layer <0-100,4=normal>"
+      "win_op <windowid> layer <0-100,4=normal>\n"
+    "<windowid> may be substituted with \"current\" to use the current window"
    },
    {
       IPC_WinList,
@@ -606,7 +607,7 @@ IPCStruct           IPCArray[] =
  * - Mandrake
  */
 
-void
+void 
 IPC_Nop(char *params, Client * c)
 {
    CommsSend(c, "nop");
@@ -614,7 +615,7 @@ IPC_Nop(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Remember(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -675,7 +676,7 @@ IPC_Remember(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_KDE(char *params, Client * c)
 {
 
@@ -719,7 +720,7 @@ IPC_KDE(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Modules(char *params, Client * c)
 {
 
@@ -801,7 +802,7 @@ IPC_Modules(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_DockPosition(char *params, Client * c)
 {
 
@@ -924,7 +925,7 @@ IPC_DockPosition(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GeneralInfo(char *params, Client * c)
 {
 
@@ -955,7 +956,7 @@ IPC_GeneralInfo(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Button(char *params, Client * c)
 {
 
@@ -1024,7 +1025,7 @@ IPC_Button(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Background(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -1207,7 +1208,7 @@ IPC_Background(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Border(char *params, Client * c)
 {
 
@@ -1276,7 +1277,7 @@ IPC_Border(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Cursor(char *params, Client * c)
 {
 
@@ -1345,7 +1346,7 @@ IPC_Cursor(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_TextClass(char *params, Client * c)
 {
    char                pq;
@@ -1489,7 +1490,7 @@ IPC_TextClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ColorModifierClass(char *params, Client * c)
 {
 
@@ -1558,7 +1559,7 @@ IPC_ColorModifierClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ActionClass(char *params, Client * c)
 {
 
@@ -1627,7 +1628,7 @@ IPC_ActionClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ImageClass(char *params, Client * c)
 {
    char                pq;
@@ -1840,7 +1841,7 @@ IPC_ImageClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_SoundClass(char *params, Client * c)
 {
 
@@ -1904,7 +1905,7 @@ IPC_SoundClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_PlaySoundClass(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -1933,7 +1934,7 @@ IPC_PlaySoundClass(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ListClassMembers(char *params, Client * c)
 {
 
@@ -2125,7 +2126,7 @@ IPC_ListClassMembers(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_DialogOK(char *params, Client * c)
 {
 
@@ -2146,7 +2147,7 @@ IPC_DialogOK(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_SetFocus(char *params, Client * c)
 {
 
@@ -2193,7 +2194,7 @@ IPC_SetFocus(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_AdvancedFocus(char *params, Client * c)
 {
 
@@ -2559,7 +2560,7 @@ IPC_AdvancedFocus(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_InternalList(char *params, Client * c)
 {
 
@@ -2641,7 +2642,7 @@ IPC_InternalList(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Pager(char *params, Client * c)
 {
 
@@ -2873,7 +2874,7 @@ IPC_Pager(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_MoveMode(char *params, Client * c)
 {
 
@@ -2944,7 +2945,7 @@ IPC_MoveMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ResizeMode(char *params, Client * c)
 {
 
@@ -3009,7 +3010,7 @@ IPC_ResizeMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_FX(char *params, Client * c)
 {
 
@@ -3494,7 +3495,7 @@ IPC_FX(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ActiveNetwork(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -3549,7 +3550,7 @@ IPC_ActiveNetwork(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ButtonShow(char *params, Client * c)
 {
    c = NULL;
@@ -3564,7 +3565,7 @@ IPC_ButtonShow(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_WinList(char *params, Client * c)
 {
 
@@ -3610,7 +3611,7 @@ IPC_WinList(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GotoArea(char *params, Client * c)
 {
 
@@ -3688,7 +3689,7 @@ IPC_GotoArea(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_WinOps(char *params, Client * c)
 {
 
@@ -3707,7 +3708,24 @@ IPC_WinOps(char *params, Client * c)
 	operation[0] = 0;
 	param1[0] = 0;
 	word(params, 1, windowid);
-	sscanf(windowid, "%8x", &win);
+	if (!strcmp(windowid, "current"))
+	  {
+	     EWin               *ewin;
+
+	     ewin = GetFocusEwin();
+	     if (ewin)
+	       {
+		  win = ewin->client.win;
+	       }
+	     else
+	       {
+		  return;
+	       }
+	  }
+	else
+	  {
+	     sscanf(windowid, "%8x", &win);
+	  }
 	word(params, 2, operation);
 	if (!operation[0])
 	  {
@@ -4157,7 +4175,7 @@ IPC_WinOps(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_NumAreas(char *params, Client * c)
 {
 
@@ -4195,7 +4213,7 @@ IPC_NumAreas(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_NumDesks(char *params, Client * c)
 {
 
@@ -4226,7 +4244,7 @@ IPC_NumDesks(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_FocusMode(char *params, Client * c)
 {
 
@@ -4297,7 +4315,7 @@ IPC_FocusMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ShowIcons(char *params, Client * c)
 {
 
@@ -4341,7 +4359,7 @@ IPC_ShowIcons(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_GotoDesktop(char *params, Client * c)
 {
 
@@ -4379,7 +4397,7 @@ IPC_GotoDesktop(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ListThemes(char *params, Client * c)
 {
 
@@ -4420,7 +4438,7 @@ IPC_ListThemes(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_SMFile(char *params, Client * c)
 {
 
@@ -4451,7 +4469,7 @@ IPC_SMFile(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ForceSave(char *params, Client * c)
 {
 
@@ -4467,7 +4485,7 @@ IPC_ForceSave(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Restart(char *params, Client * c)
 {
 
@@ -4478,7 +4496,7 @@ IPC_Restart(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_RestartWM(char *params, Client * c)
 {
 
@@ -4500,7 +4518,7 @@ IPC_RestartWM(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_RestartTheme(char *params, Client * c)
 {
 
@@ -4520,7 +4538,7 @@ IPC_RestartTheme(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Exit(char *params, Client * c)
 {
 
@@ -4534,7 +4552,7 @@ IPC_Exit(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_DefaultTheme(char *params, Client * c)
 {
 
@@ -4574,7 +4592,7 @@ IPC_DefaultTheme(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_CurrentTheme(char *params, Client * c)
 {
 
@@ -4590,7 +4608,7 @@ IPC_CurrentTheme(char *params, Client * c)
    params = NULL;
 }
 
-void
+void 
 IPC_AutoSave(char *params, Client * c)
 {
 
@@ -4627,7 +4645,7 @@ IPC_AutoSave(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Help(char *params, Client * c)
 {
 
@@ -4724,7 +4742,7 @@ IPC_Help(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Copyright(char *params, Client * c)
 {
 
@@ -4782,7 +4800,7 @@ IPC_Copyright(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Version(char *params, Client * c)
 {
 
@@ -4816,7 +4834,7 @@ IPC_Version(char *params, Client * c)
  * - Mandrake
  */
 
-int
+int 
 HandleIPC(char *params, Client * c)
 {
 
@@ -4852,7 +4870,7 @@ HandleIPC(char *params, Client * c)
  * button was depressed
  */
 
-void
+void 
 ButtonIPC(int val, void *data)
 {
 
@@ -4867,7 +4885,7 @@ ButtonIPC(int val, void *data)
  *
  */
 
-void
+void 
 IPC_ReloadMenus(char *params, Client * c)
 {
    /*
@@ -4918,7 +4936,7 @@ IPC_ReloadMenus(char *params, Client * c)
    c = NULL;
 }
 
-void
+void 
 IPC_GroupInfo(char *params, Client * c)
 {
 
@@ -5013,7 +5031,7 @@ IPC_GroupInfo(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GroupOps(char *params, Client * c)
 {
 
@@ -5081,7 +5099,6 @@ IPC_GroupOps(char *params, Client * c)
 			    sscanf(groupid, "%d", &index);
 			    group = FindItem(NULL, index, LIST_FINDBY_ID, LIST_TYPE_GROUP);
 			 }
-
 		       RemoveEwinFromGroup(ewin, group);
 		       Esnprintf(buf, sizeof(buf), "remove %8x", win);
 		    }
@@ -5095,7 +5112,6 @@ IPC_GroupOps(char *params, Client * c)
 			    sscanf(groupid, "%d", &index);
 			    group = FindItem(NULL, index, LIST_FINDBY_ID, LIST_TYPE_GROUP);
 			 }
-
 		       BreakWindowGroup(ewin, group);
 		       Esnprintf(buf, sizeof(buf), "break %8x", win);
 		    }
@@ -5125,7 +5141,7 @@ IPC_GroupOps(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Group(char *params, Client * c)
 {
 
@@ -5274,7 +5290,7 @@ IPC_Group(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_MemDebug(char *params, Client * c)
 {
    EDisplayMemUse();
